fixed missing border radius

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -132,6 +132,7 @@ input {
 		outline: none !important;
 		box-shadow: none !important;
 		transition: background-color 0.2s ease-in-out;
+		border-radius: 0.5rem;
 
 		&:hover,
 		&:focus {
